styles/menu.css
:root {
  --top-padding: 5rem;
}

.menu {
  position: fixed;
  top: 0;
  left: -100%; /* Start off-screen */
  width: 100%;
  height: 100vh;
  height: 100dvh;
  transition: left 0.3s ease-in-out; /* Smooth transition */
}

/* TODO: Fix micro gap */
.menu.open {
  display: flex;
  flex-direction: column;
  gap: 0;
  left: 0; /* Slide in */
}

.menu::backdrop {
  background: none;
}

.menu__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: var(--mobile-gap3);
  padding-left: 2rem;
  padding-right: var(--mobile-gap3);
  background: var(--basic-black, #343434);
}

.menu__close {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 1.5rem;
  height: 1.5rem;
  flex-shrink: 0;
}

.menu__company-logo {
  display: flex;
  width: 3rem;
  height: 3rem;
  padding: 0.00119rem 0rem 0.00006rem 0rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.menu__navbar {
  display: none;
}

.menu__company-name {
  margin-left: auto;
  display: flex;
  width: 7.10369rem;
  padding: 0rem 0.70438rem 0rem 0.77431rem;
  height: 5rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  background: linear-gradient(252deg, #76564b 5.21%, #614238 100%);
  box-shadow: 0px 0px 3.296px 0px rgba(0, 0, 0, 0.16);
}

.menu__list {
  background: var(--basic-black, #343434);
  width: 15.3125rem;
  flex: 1 0 0;
  /* flex-basis: 100%; */
  color: var(--basic-white, #fff);
  display: flex;
  padding: 3.75rem var(--mobile-gap3);
  flex-direction: column;
  align-items: flex-start;
  gap: 1rem;
  flex-shrink: 0;
}

.menu__item {
  width: fit-content;
  display: flex;
  padding: 0.5rem 1rem;
  align-items: flex-start;
  gap: 0.625rem;
  font-size: 0.875rem;
  line-height: 140%;
  letter-spacing: 0.0875rem;
  text-transform: uppercase;
}

.menu__item--active {
  border: 0.5px solid var(--p2, #e9dfc8);
}

.menu__item a {
  color: var(--basic-white, #fff);
  transition: color 0.3s ease;
}

/* Tablet screens: 640px - x */
@media (min-width: 40rem) {
}

/* Desktop screens: 1248px - x */
@media (min-width: 78rem) {
  .menu {
    display: none;
  }
}

